# Difficult-Rocket

./: .gitattributes  .gitignore  .gitmodules  .nuitka-complie.ps1.swp  .pdm.toml  DR-gitee.pyproj  DR-gitee.sln  DR-py.jl  DR-start.py  DR.jl  DR.py  Difficult_Rocket.py  LICENSE  README-en.md  README.md  SR-PY.py  action_build.ps1  after_compile.py  biggit.ps1  biggit.sh  build_rs.ps1  compile.ps1  complie.cmd  desktop.ini  gen_require.py  merger.cmd  nuitka-complie.ps1  nuitka-mac.ps1  nuitka-win.ps1  nuitka1-complie.ps1  nuitka2-complie.ps1  nuitka3-complie.ps1  nuitka_build.py  pyproject.toml  requirement-build.txt  requirement-dev.txt  requirement.txt  start.cmd  start.ps1  superman.py  (+5 more)
.github/workflow/: main.yml
.github/workflows/: after_compile.py  dr_rs.yml  dsm.py  get_info.py  nuitka.yml  page.yml  post_compile.py  release.yml  requirement.txt  static.yml
.zed/: settings.json
DR/: __init__.py  client.py  configs.py  crash.py  drag_sprite.py  main.py  server.py  unpack_textures.py
DR/api/: Exp.py  __init__.py  new_thread.py  tools.py  translate.py
Difficult_Rocket/: __init__.py  client.py  configs.py  crash.py  main.jl  main.py  runtime.py  server.py  translate.py  unpack_textures.py
Difficult_Rocket/Game_threads/: orbit_demo.py
Difficult_Rocket/api/: Exp.py  __init__.py  calculation.py  camera.py  command.py  delivery.py  log.py  new_thread.py  scientific_unit.py  screen.py  serializer.py  thread.py  tools.py  translate.py
Difficult_Rocket/client/: __init__.py  screen.py
Difficult_Rocket/command/: __init__.py  api.py  command.py  line.py  tree.py
Difficult_Rocket/crash/: __init__.py  crash.py
Difficult_Rocket/data/: log_config.py
Difficult_Rocket/exception/: __init__.py  command.py  language.py  logger.py  main.py  threading.py  unsupport.py
Difficult_Rocket/fps/: __init__.py  fps_log.py
Difficult_Rocket/graphics/: widgets.py
Difficult_Rocket/gui/: widgets.py
Difficult_Rocket/guis/: __init__.py  label.py  (+1 more)
SRtool/: __init__.py  client.py  main.py  translate.py  unpack_textures.py
Test Floder/: Test.txt
config/: lndl-logger.toml  local_logger.toml  main.toml
configs/: PartList.xml  basic_config.json  dock1.xml  game.config  local_logger.toml  logger.json5  logger.toml  logging.json5  main.config  main.toml  none_ship.xml  planet.json  textures.json5  textures.toml  view.json5  window.json
docs/: .gitignore  CNAME  README-cn.md  README-en.md  book.toml  make_book_with_md5.ps1  rua!.md  serve.ps1  update_logs.md  字体展示.pptx
libs/: P_C.py  S_D.py  __init__.py  client.py  compute_thread.py  config.py  configs.py  delivery.py  loads.py  main.py  render.py  render_thread.py  server.py  setup.py  startup.py  tools.py
libs/DR-rs/: Cargo.toml  setup.py
libs/DR-rs/Difficult_Rocket_rs/: __init__.pyi
libs/DR-rs/src/: lib.rs
libs/Difficult_Rocket_rs/: Cargo.toml  __init__.py  pyproject.toml  readme.md  setup.py
libs/Difficult_Rocket_rs/lib/: Difficult_Rocket_rs.cp38-win_amd64.pyd
libs/Difficult_Rocket_rs/src/: Cargo.toml  lib.rs  mac-build.ps1  post_build.py  readme.md  setup.py
libs/Difficult_Rocket_rs/src/src/: __init__.py  lib.rs  logger.rs  plugin.rs  python.rs  render.rs  rustfmt.toml  simulator.rs  sr1_data.rs  sr1_render.rs  types.rs
libs/pyglet_rs/src/: Cargo.toml  build.ps1  post_build.py  setup.py
libs/pyglet_rs/src/src/: __init__.py  lib.rs  math.rs  pymath.rs  sprite.rs
libs/pyglet_rs/src/test/: vector.py
mods/: mod_test.py
mods/dr_game/Difficult_Rocket_rs/src/: Cargo.toml  mac-build.ps1  post_build.py  pyproject.toml  readme.md  rust-toolchain.toml  rustfmt.toml  setup.py
mods/dr_game/Difficult_Rocket_rs/src/src/: __init__.py  data_type.rs  dr_physics.rs  lib.rs  logger.rs  plugin.rs  plugin_loader.rs  python.rs  render.rs  renders.rs  simulator.rs  sr1_data.rs  sr1_parse.rs  translate.rs  types.rs  xml_reader.rs
mods/dr_game/Difficult_Rocket_rs/src/src/data_type/: dr.rs  math.rs  sr1.rs
mods/dr_game/Difficult_Rocket_rs/src/src/dr_physics/: math.rs  rigid.rs  simulation.rs
mods/dr_game/Difficult_Rocket_rs/src/src/platform/: mod.rs
mods/dr_game/Difficult_Rocket_rs/src/src/platform/win/: mod.rs
mods/dr_game/Difficult_Rocket_rs/src/src/python/: console.rs  data.rs  editor.rs  renders.rs
mods/dr_game/Difficult_Rocket_rs/src/src/renders/: opengl.rs  win.rs  win_gpu.rs
mods/dr_game/Difficult_Rocket_rs/src/src/sr1_data/: part_list.rs  ship.rs
mods/dr_game/Difficult_Rocket_rs/src/src/sr1_parse/: data_structure.rs  part_list.rs  py.rs  ship.rs
mods/dr_game/Difficult_Rocket_rs/src/src/sr1_parse/data_structure/: part_list.rs  ship.rs
performance_test/: speed_of_sprite_test.py  test_for_speed.py  test_speed_of_sprite.py
scripts/: build_rs.ps1  compile_mod.py  lndl-config.py  pack_dr_mod.py  package.py
ships/: 003  0401008  0401011  0401011A  0401012  0401012 GPSD Alliance 30  0402001  0405001  0405002  055F  055I  1  12  4  401008  A  A533  A533S  A72  A72QAW  A72QAWA  A72QAWAA  A72S  A81  A81A  AHBML Is  AaQAa  Aj2  Alliance 0401002  Amect-MAIIa  Amect-MAIIb  Anthurium  Anthurium All  Aooo  Bob 1  CD DD  Doco  EarthsssSZ  Fallen Star  Fegine eXperimental  (+55 more)
sys_value/: basic_config.json5  parts.json5  planet.json5  runtime.json5  window.json5
test/: data.jl
tests/: _test_import.py  _test_logging.py  _test_threading.py  check_check.py  crash_check.py  dict_check_check.py  dict_test.py  import_test.py  logging_conf.py  many_test_of_hitbox.py  mod_tick.py  muti_window.py  mutiproser_check.py  re.py  sort_speed_check.py  test.py  test_config.config  test_config_file.py  test_image.py  test_json5.py  test_linear_algebra.py  test_logging.py  test_logging_conf.py  test_mutiproser.py  test_process.py  test_threading.py  test_tools.py  threading.py
textures/: EmptyShip.xml  LevelLandingTraining.xml  LevelOrbitTraining.xml  LevelSatelliteRecovery.xml  Menu.xml  PlanetSprites.xml  Runtime.json5  Runtime.xml  SatelleteRendezvous.xml  SkinAngel.xml  SkinLava.xml  SmolarSystem.xml
try/: class_check.py  some_big_num.py  sysstd.py  奇怪的东西.py
try/cprint/: CMakeLists.txt  compile.py  cprint.c  dll_load.py
(+439 files in other folders)
