[package]
name = "dr_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = 'Difficult_Rocket_rs'
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.18.0"
features = ["extension-module"]