[package]
name = "difficult_rocket_rs"
version = "0.2.0"
edition = "2021"
license-file = '../../LICENSE'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = 'difficult_rocket_rs'
crate-type = ["cdylib"]

[profile.dev.package.rapier2d-f64]
opt-level = 3

[dependencies.rapier2d-f64]
version = "0.17.1"
features = ["simd-stable"]

[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module"]
