[package]
name = "difficult_rocket_rs"
version = "0.2.5"
edition = "2021"
license-file = '../../LICENSE'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = 'difficult_rocket_rs'
crate-type = ["cdylib"]

[profile.dev.package.rapier2d-f64]
opt-level = 3

[profile.release]
codegen-units = 1

#[dependencies.quick-xml]
#version = "0.27.1"
#features = ["serialize"]

[dependencies.serde]
version = "1.0.154"
features = ["derive"]

[dependencies.xml-rs]
version = "0.8.4"

[dependencies.serde-xml-rs]
version = "0.6.0"

[dependencies.rapier2d-f64]
version = "0.17.1"
features = ["simd-stable"]

[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module"]
