[package]
name = "pyglet_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = 'pyglet_rs'
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1

[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module", "multiple-pymethods"]
