[package]
name = "difficult_rocket_rs"
version = "0.4.2"
edition = "2021"
license-file = '../../LICENSE'
authors = ["shenjackyuanjie <3695888@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = 'difficult_rocket_rs'
crate-type = ["cdylib"]

#[profile.dev.package.rapier2d-f64]
#opt-level = 2

[profile.release]
lto = "fat"
# 舍弃恐慌信息以快速终止程序，而非展开调用栈。
# 请以开发模式编译程序以检查恐慌信息。
panic = "abort"
opt-level = 2

[dependencies]
anyhow = "1.0"

quick-xml = { version = "0.36.1", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

nalgebra = "0.33"
pyo3 = { version = "0.22.2", features = [
    "extension-module",
    "macros",
    "py-clone",
] }

rapier2d-f64 = { version = "0.22.0", features = ["simd-stable"] }
# 虽然但是, raiper在这里!
