[package]
name = "difficult_rocket_rs"
version = "0.4.2"
edition = "2024"
license-file = '../../LICENSE'
authors = ["shenjackyuanjie <3695888@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = 'difficult_rocket_rs'
crate-type = ["cdylib"]

#[profile.dev.package.rapier2d-f64]
#opt-level = 2

[dependencies]
anyhow = "1.0"

quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

nalgebra = "0.33"
pyo3 = { version = "0.25", features = [
    "extension-module",
    "macros",
    "py-clone",
] }


rapier2d-f64 = { version = "0.26", features = ["simd-stable"] }
# 虽然但是, raiper在这里!

# 让我们来试试黑魔法
# 我投降, 我直接写 gl 还不行吗
gl33 = "0.2.1"
windows = { version = "0.61.1", features = ["Win32_UI_Shell", "Win32_System_Com"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_UI_Shell"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_OpenGL",
] }
